--- a/header.html
+++ b/header.html
@@ -1,5 +1,13 @@
 <head>
 	<meta charset="utf-8" />
+	
+	<!-- NAVBAR -->
+	<div class="container">
+		<nav class="navbar fixed-top navbar-dark bg-dark ps-4">
+			<a class="navbar-brand" href="#">Test</a>
+		</nav>
+	</div>
+
 	<title>My First Web Page</title>
 	<link rel="stylesheet" href="bootstrap.min.css" />
 	<script src="bootstrap.min.js"></script>
