--- a/header.html
+++ b/header.html
@@ -6,9 +6,15 @@
 
 	<!-- NAVBAR -->
 	<div id="navbar">
-		<nav class="navbar navbar-default fixed-top navbar-dark bg-dark">
+		<nav class="navbar navbar-default sticky-top navbar-dark bg-dark">
 			<div class="container">
-				<a class="navbar-brand" href="#">Test</a>
+				<a class="navbar-brand" href="#">
+					<img src="logo.png" width="30" height="30">
+					
+				</a>
+				<!--
+					<button type="button" class="btn btn-secondary">Change Color</button>
+				-->
 			</div>
 		</nav>
 	</div>
