--- a/header.html
+++ b/header.html
@@ -9,12 +9,21 @@
 		<nav class="navbar navbar-default sticky-top navbar-dark bg-dark">
 			<div class="container">
 				<a class="navbar-brand" href="#">
-					<img src="logo.png" width="30" height="30" />
+					<img src="logo.png" width="30" height="30">
+					Smarties
 				</a>
+
+				<ul class="navbar-nav me-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Tutors</a>
+					</li>
+				</ul>
+				
 				<!--
 					<button type="button" class="btn btn-secondary">Change Color</button>
 				-->
 			</div>
+			
 		</nav>
 	</div>
 </head>
