--- a/header.html
+++ b/header.html
@@ -8,14 +8,14 @@
 	<div id="navbar">
 		<nav class="navbar navbar-default sticky-top navbar-dark bg-dark">
 			<div class="container">
-				<a class="navbar-brand" href="#">
+				<a class="navbar-brand" href="index.html">
 					<img src="logo.png" width="30" height="30">
 					Smarties
 				</a>
 
 				<ul class="navbar-nav me-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="#">Tutors</a>
+						<a class="nav-link" href="tutors.html">Tutors</a>
 					</li>
 				</ul>
 				
