--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
-<body>
+<body> 
 	<div class="container">
 		<div class="row">
+			<!--
 			<div class="col-md-12">
 				<h1>My First Bootstrap Page</h1>
 				<p>This is some text.</p>
 			</div>
+			-->
+
 			<!-- Button trigger modal -->
+			<!--
 			<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Launch demo modal</button>
+			-->
 
 			<!-- Modal -->
+			<!--
 			<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 				<div class="modal-dialog">
 					<div class="modal-content">
@@ -22,6 +28,27 @@
 							<button type="button" class="btn btn-primary">Save changes</button>
 						</div>
 					</div>
+				</div>
+			</div>
+			-->
+		</div>
+	</div>
+
+	<!-- CAROUSEL (TEST) -->
+	<!-- I moved the carousel out of the container so it could fill the page. -->
+	<div id="homeCarousel" class="carousel slide" data-bs-ride="carousel">
+		<div class="carousel-inner">
+			<div class="carousel-item active" data-bs-interval="5000">
+				<img src="grayBg.png" class="d-block" style="width: 100vw; height: 96vh" alt="First Slide">
+				<div class="carousel-caption">
+					<h1>Welcome!</h1>
+				</div>
+			</div>
+
+			<div class="carousel-item" data-bs-interval="5000">
+				<img src="orangeBg.png" class="d-block" style="width: 100vw; height: 96vh" alt="Second Slide">
+				<div class="carousel-caption">
+					<h1>Welcome!</h1>
 				</div>
 			</div>
 		</div>
