--- a/header.html
+++ b/header.html
@@ -1,12 +1,13 @@
 <head>
 	<meta charset="utf-8" />
-	<title>My First Web Page</title>
+	<title>Smarties</title>
 	<link rel="stylesheet" href="bootstrap.min.css" />
+	<link rel="stylesheet" href="custom.css"/>
 	<script src="bootstrap.min.js"></script>
 
 	<!-- NAVBAR -->
 	<div id="navbar">
-		<nav class="navbar navbar-default sticky-top navbar-dark bg-dark">
+		<nav class="navbar navbar-default fixed-top navbar-dark bg-dark">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
 					<img src="logo.png" width="30" height="30">
