--- a/tutors.html
+++ b/tutors.html
@@ -1,51 +1,45 @@
 <!-- (HARDCODED) Tutors Listing Page-->
 <body>
-    <div class="container">
-        <ul class="list-group">
-            <li class = "list-group-item">
-                <img src="stockphoto.png" width="50" height="50">
-                <h5>Jane Doe</h5>
-                <p>
-                    Expertise: Social Studies, Geography, History
-                </p>
-            </li>
-            <li class = "list-group-item">
-                <img src="stockphoto.png" width="50" height="50">
-                <h5>Joe Blackacre</h5>
-                <p>
-                    Expertise: Civil Law, Property Law
-                </p>
-            </li>
-            <li class = "list-group-item">
-                <img src="stockphoto.png" width="50" height="50">
-                <h5>John Foo</h5>
-                <p>
-                    Expertise: Computer Science
-                </p>
-            </li>
-            <li class = "list-group-item">
-                <img src="stockphoto.png" width="50" height="50">
-                <h5>John Doe</h5>
-                <p>
-                    Expertise: Philosophy
-                </p>
-            </li>
-        </ul>
+    <div id="tutorList" style="padding-top: 100px">
+        <div class="container">
+            <ul class="list-group">
+                <li class = "list-group-item" style="background-color: rgba(255, 255, 255, 0.65)">
+                    <img src="stockphoto.png" width="50" height="50" style="float: right">
+                    <h5>Jane Doe</h5>
+                    <p>
+                        Expertise: Social Studies, Geography, History
+                    </p>
+                </li>
+                <li class = "list-group-item" style="background-color: rgba(255, 255, 255, 0.65)">
+                    <img src="stockphoto.png" width="50" height="50" style="float: right">
+                    <h5>Joe Blackacre</h5>
+                    <p>
+                        Expertise: Civil Law, Property Law
+                    </p>
+                </li>
+                <li class = "list-group-item" style="background-color: rgba(255, 255, 255, 0.65)">
+                    <img src="stockphoto.png" width="50" height="50" style="float: right">
+                    <h5>John Foo</h5>
+                    <p>
+                        Expertise: Computer Science
+                    </p>
+                </li>
+                <li class = "list-group-item" style="background-color: rgba(255, 255, 255, 0.65)">
+                    <img src="stockphoto.png" width="50" height="50" style="float: right">
+                    <h5>John Doe</h5>
+                    <p>
+                        Expertise: Philosophy
+                    </p>
+                </li>
+            </ul>
+        </div>
     </div>
 
-    <!-- Filler Space -->
-    <pre>
-        <p>
-            
-
-        </p>
-    </pre>
 </body>
 
-<!-- Keep images on the right side -->
 <style>
-    img
+    body
     {
-        float: right
+        background-color: #bababa;
     }
 </style>
