--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 		<!-- Actual Carousel Content, like slides-->
 		<div class="carousel-inner">
 			<div class="carousel-item active" data-bs-interval="5000">
-				<img src="grayBg.png" class="d-block" style="width: 100vw; height: 100vh" alt="First Slide">
+				<img src="/grayBg.png" class="d-block" style="width: 100vw; height: 100vh" alt="First Slide">
 				<div class="carousel-caption">
 					<h1>Welcome!</h1>
 				</div>
 			</div>
 
 			<div class="carousel-item" data-bs-interval="5000">
-				<img src="orangeBg.png" class="d-block" style="width: 100vw; height: 100vh" alt="Second Slide">
+				<img src="/orangeBg.png" class="d-block" style="width: 100vw; height: 100vh" alt="Second Slide">
 				<div class="carousel-caption">
 					<h1>Welcome!</h1>
 				</div>
