--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Smarties</title>
-	<link rel="stylesheet" href="bootstrap.min.css" />
-	<link rel="stylesheet" href="custom.css"/>
+	<link rel="stylesheet" href="/bootstrap.min.css" />
+	<link rel="stylesheet" href="/custom.css"/>
 	<script src="bootstrap.min.js"></script>
 
 	<!-- NAVBAR -->
@@ -10,13 +10,13 @@
 		<nav class="navbar navbar-default sticky-top navbar-dark bg-dark">
 			<div class="container">
 				<a class="navbar-brand" href="/">
-					<img src="logo.png" width="30" height="30">
+					<img src="/logo.png" width="30" height="30">
 					Smarties
 				</a>
 
 				<ul class="navbar-nav me-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="tutors">Tutors</a>
+						<a class="nav-link" href="/tutors">Tutors</a>
 					</li>
 				</ul>
 				
