--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<body> 
+<!--
+	For the most part DEPRECATED
+	Currently used as reference
+
+	Real homepage is in 'index.pug'
+-->
+
+<body>
 	<div class="container">
 		<div class="row">
 			<!--
@@ -46,14 +53,14 @@
 		<!-- Actual Carousel Content, like slides-->
 		<div class="carousel-inner">
 			<div class="carousel-item active" data-bs-interval="5000">
-				<img src="/grayBg.png" class="d-block" style="width: 100vw; height: 100vh" alt="First Slide">
+				<img src="/grayBg.png" class="d-block" style="width: 100vw; height: 95vh" alt="First Slide">
 				<div class="carousel-caption">
 					<h1>Welcome!</h1>
 				</div>
 			</div>
 
 			<div class="carousel-item" data-bs-interval="5000">
-				<img src="/orangeBg.png" class="d-block" style="width: 100vw; height: 100vh" alt="Second Slide">
+				<img src="/orangeBg.png" class="d-block" style="width: 100vw; height: 95vh" alt="Second Slide">
 				<div class="carousel-caption">
 					<h1>Welcome!</h1>
 				</div>
@@ -68,5 +75,4 @@
 		background-color: #bababa;
 	}
 </style>
-
 
