--- a/header.html
+++ b/header.html
@@ -7,19 +7,20 @@
 
 	<!-- NAVBAR -->
 	<div id="navbar">
-		<nav class="navbar navbar-default sticky-top navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
 			<div class="container">
 				<a class="navbar-brand" href="/">
 					<img src="/logo.png" width="30" height="30">
 					Smarties
 				</a>
 
-				<ul class="navbar-nav me-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="/tutors">Tutors</a>
-					</li>
-				</ul>
-				
+				<div class="collapse navbar-collapse">
+					<div class="navbar-nav me-auto">
+						<a class="nav-item nav-link" href="/tutors">Tutors</a>
+						<a class="nav-item nav-link" href="/reservations">Reservations</a>
+					</div>
+				</div>
+
 				<!--
 					<button type="button" class="btn btn-secondary">Change Color</button>
 				-->
