--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,11 @@
-<!-- FOOTER -->
+<!-- 
+	FOOTER
+
+	(Migrate to .pug format in the future)
+ -->
 <div class="container">
-	<footer class="sticky-bottom py-3 my-4">
-		<ul class= "nav justify-content-center border-bottom pb-3 mb-3">
+	<footer class="sticky-bottom my-4">
+		<ul class= "nav justify-content-center mb-3">
 			<li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
 			<li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
 			<li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
