--- a/header.html
+++ b/header.html
@@ -1,3 +1,8 @@
+<!--
+	HEADER FILE
+
+	(Migrate to .pug format in the future)
+-->
 <head>
 	<meta charset="utf-8" />
 	<title>Smarties</title>
@@ -17,15 +22,73 @@
 				<div class="collapse navbar-collapse">
 					<div class="navbar-nav me-auto">
 						<a class="nav-item nav-link" href="/tutors">Tutors</a>
-						<a class="nav-item nav-link" href="/reservations">Reservations</a>
+						<a class="nav-item nav-link" href="/reservations">Reservations</a>	
 					</div>
 				</div>
 
+				<!-- TUTOR SIGNUP BUTTON -->
+				<button type="button" class="btn btn-sm btn-primary active mx-2" style="background-color: #ff7b3c" data-bs-toggle="modal" data-bs-target="#tutorModal" href="/">
+					Become a Tutor
+				</button>
+
+				<!-- RESERVATION CREATION BUTTON -->
+				<button type="button" class="btn btn-sm btn-primary active" style="background-color: #ff7b3c" data-bs-toggle="modal" data-bs-target="#reservationModal" href="/">
+					Make a Reservation
+				</button>
 				<!--
 					<button type="button" class="btn btn-secondary">Change Color</button>
 				-->
-			</div>
-			
+			</div>	
 		</nav>
 	</div>
 </head>
+
+<!-- 
+	RESERVATION MODAL 
+
+	Stays outside of main header, else it'll be greyed out with the rest of the page.
+-->
+<div class="modal fade" id="reservationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+	  <div class="modal-content bg-dark">
+		<div class="modal-header" data-bs-theme="dark" style="border: none">
+		  <h5 class="modal-title" id="exampleModalLabel" style="color: white">Make a Reservation</h5>
+		  <button type="button" class="btn-close btn-sm" data-bs-dismiss="modal" aria-label="Close">
+		  </button>
+		</div>
+		<div class="modal-body" style="color: white">
+		  ...
+		  <div class="container">
+			<div class="text-center">
+				<button type="button" class="btn btn-primary" style="background-color: #ff7b3c">Submit</button>
+			</div>
+		</div>
+		</div>
+	  </div>
+	</div>
+  </div>
+
+<!-- 
+	TUTOR MODAL 
+
+	Stays outside of main header, else it'll be greyed out with the rest of the page.
+-->
+  <div class="modal fade" id="tutorModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+	  <div class="modal-content bg-dark">
+		<div class="modal-header" data-bs-theme="dark" style="border: none">
+		  <h5 class="modal-title" id="exampleModalLabel" style="color: white">Sign up to be a Tutor!</h5>
+		  <button type="button" class="btn-close btn-sm" data-bs-dismiss="modal" aria-label="Close">
+		  </button>
+		</div>
+		<div class="modal-body" style="color: white">
+		  ...
+		  <div class="container">
+			<div class="text-center">
+				<button type="button" class="btn btn-primary" style="background-color: #ff7b3c">Submit</button>
+			</div>
+		</div>
+		</div>
+	  </div>
+	</div>
+  </div>
