Understanding Auth0, Passport.js
Trying to work out some kinks with user authentication

--- a/header.html
+++ b/header.html
@@ -26,15 +26,19 @@
 					</div>
 				</div>
 
-				<!-- TUTOR SIGNUP BUTTON -->
-				<button type="button" class="btn btn-sm btn-primary active mx-2" style="background-color: #ff7b3c" data-bs-toggle="modal" data-bs-target="#tutorModal" href="/">
-					Become a Tutor
-				</button>
+				<!-- Two buttons justify towards the right side -->
+				<div class="text-right">
+					<!-- TUTOR SIGNUP BUTTON -->
+					<button type="button" class="btn btn-sm btn-primary active mx-1" style="background-color: #ff7b3c" data-bs-toggle="modal" data-bs-target="#tutorModal" href="/">
+						Become a Tutor
+					</button>
 
-				<!-- RESERVATION CREATION BUTTON -->
-				<button type="button" class="btn btn-sm btn-primary active" style="background-color: #ff7b3c" data-bs-toggle="modal" data-bs-target="#reservationModal" href="/">
-					Make a Reservation
-				</button>
+					<!-- RESERVATION CREATION BUTTON -->
+					<button type="button" class="btn btn-sm btn-primary active" style="background-color: #ff7b3c" data-bs-toggle="modal" data-bs-target="#reservationModal" href="/">
+						Make a Reservation
+					</button>
+				</div>
+				
 				<!--
 					<button type="button" class="btn btn-secondary">Change Color</button>
 				-->
