--- a/header.html
+++ b/header.html
@@ -29,9 +29,9 @@
 				<!-- Two buttons justify towards the right side -->
 				<div class="text-right">
 					<!-- TUTOR SIGNUP BUTTON -->
-					<button type="button" class="btn btn-sm btn-primary active mx-1" style="background-color: #ff7b3c" data-bs-toggle="modal" data-bs-target="#tutorModal" href="/">
+					<a type="button" class="btn btn-sm btn-primary active mx-1" style="background-color: #ff7b3c" href="/tutorSignup">
 						Become a Tutor
-					</button>
+					</a>
 
 					<!-- RESERVATION CREATION BUTTON -->
 					<button type="button" class="btn btn-sm btn-primary active" style="background-color: #ff7b3c" data-bs-toggle="modal" data-bs-target="#reservationModal" href="/">
