add reservation form

--- a/header.html
+++ b/header.html
@@ -34,7 +34,7 @@
 					</a>
 
 					<!-- RESERVATION CREATION BUTTON -->
-					<button type="button" class="btn btn-sm btn-primary active" style="background-color: #ff7b3c" data-bs-toggle="modal" data-bs-target="#reservationModal" href="/">
+					<a type="button" class="btn btn-sm btn-primary active" style="background-color: #ff7b3c" href="/newRes">
 						Make a Reservation
 					</button>
 				</div>
