--- a/header.html
+++ b/header.html
@@ -12,7 +12,7 @@
 
 	<!-- NAVBAR -->
 	<div id="navbar">
-		<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark shadow-lg">
 			<div class="container">
 				<a class="navbar-brand" href="/">
 					<img src="/logo.png" width="30" height="30">
@@ -34,7 +34,7 @@
 					</a>
 
 					<!-- RESERVATION CREATION BUTTON -->
-					<a type="button" class="btn btn-sm btn-primary active" style="background-color: #ff7b3c" href="/newRes">
+					<button type="button" class="btn btn-sm btn-primary active" style="background-color: #ff7b3c" data-bs-toggle="modal" data-bs-target="#reservationModal" href="/">
 						Make a Reservation
 					</button>
 				</div>
