--- a/header.html
+++ b/header.html
@@ -12,7 +12,7 @@
 
 	<!-- NAVBAR -->
 	<div id="navbar">
-		<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark shadow-lg">
 			<div class="container">
 				<a class="navbar-brand" href="/">
 					<img src="/logo.png" width="30" height="30">
@@ -29,14 +29,24 @@
 				<!-- Two buttons justify towards the right side -->
 				<div class="text-right">
 					<!-- TUTOR SIGNUP BUTTON -->
+					<!--
 					<button type="button" class="btn btn-sm btn-primary active mx-1" style="background-color: #ff7b3c" data-bs-toggle="modal" data-bs-target="#tutorModal" href="/">
 						Become a Tutor
 					</button>
+					-->
+					<a type="button" class="btn btn-sm btn-primary active mx-1" style="background-color: #ff7b3c" href="/tutorSignup">
+						Become a Tutor
+					</a>
 
 					<!-- RESERVATION CREATION BUTTON -->
+					<!--
 					<button type="button" class="btn btn-sm btn-primary active" style="background-color: #ff7b3c" data-bs-toggle="modal" data-bs-target="#reservationModal" href="/">
 						Make a Reservation
 					</button>
+					-->
+					<a type="button" class="btn btn-sm btn-primary active" style="background-color: #ff7b3c" href="/newRes">
+						Make a Reservation
+					</a>
 				</div>
 				
 				<!--
