--- a/header.html
+++ b/header.html
@@ -34,7 +34,7 @@
 						Become a Tutor
 					</button>
 					-->
-					<a type="button" class="btn btn-sm btn-primary active mx-1" style="background-color: #ff7b3c" href="/tutorSignup">
+					<a type="button" class="btn btn-sm btn-primary active mx-1" style="background-color: #2f96db" href="/tutorSignup">
 						Become a Tutor
 					</a>
 
@@ -44,7 +44,7 @@
 						Make a Reservation
 					</button>
 					-->
-					<a type="button" class="btn btn-sm btn-primary active" style="background-color: #ff7b3c" href="/newRes">
+					<a type="button" class="btn btn-sm btn-primary active" style="background-color: #2f96db" href="/newRes">
 						Make a Reservation
 					</a>
 				</div>
@@ -74,7 +74,7 @@
 		  ...
 		  <div class="container">
 			<div class="text-center">
-				<button type="button" class="btn btn-primary" style="background-color: #ff7b3c">Submit</button>
+				<button type="button" class="btn btn-primary" style="background-color: #2f96db">Submit</button>
 			</div>
 		</div>
 		</div>
@@ -99,7 +99,7 @@
 		  ...
 		  <div class="container">
 			<div class="text-center">
-				<button type="button" class="btn btn-primary" style="background-color: #ff7b3c">Submit</button>
+				<button type="button" class="btn btn-primary" style="background-color: #3ca1ff">Submit</button>
 			</div>
 		</div>
 		</div>
